--- a/App/templates/secret.html
+++ b/App/templates/secret.html
@@ -64,9 +64,7 @@
             <i class="bi bi-music-note-beamed"></i> Reproduce el audio y continua
         </h4>
         <audio controls>
-            <source src="/media/music/01%20Solamente%20T%C3%BA%20.mp3" type="audio/mpeg">
-            <!-- O prueba con la ruta absoluta -->
-
+            <source src="/media/solamente_tu.mp3" type="audio/mpeg">
         </audio>
         <p class="mt-2" style="color: #33aad6; font-style: italic;">
             "Solamente tu - Nuestro tema"
@@ -549,6 +547,5 @@
     <!-- Confeti al entrar -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 
-    <script srcc="{% static 'js\animacion.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
     {% endblock %}
